Fix: Comment out dark mode for now

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,8 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* Remove this for now */
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +24,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
